[package]
name = "scheme-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
profile=[]

[dependencies]
anyhow="1.0.69"
peg="0.8.1"
pprof = {version = "0.11.1", features=["flamegraph"]}

[profile.release]
debug = true